--- a/app/globals.css
+++ b/app/globals.css
@@ -119,6 +119,10 @@
   body {
     @apply bg-background text-foreground overflow-hidden overscroll-none;
   }
+  html {
+    font-size: 22px;
+    
+  }
 
   /* Minimal, thin scrollbar */
   ::-webkit-scrollbar {
