--- a/app/globals.css
+++ b/app/globals.css
@@ -117,7 +117,7 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground overflow-hidden overscroll-none;
+    @apply bg-background text-foreground overscroll-none overflow-hidden h-[100dvh];
   }
   html {
     font-size: 22px;
